--- a/style.css
+++ b/style.css
@@ -34,9 +34,6 @@ li{
     list-style: none;
 }
 
-.hide{
-    display: none;
-}
 
 p{
     font-size: 16px;
@@ -143,12 +140,59 @@ p{
     outline: none;
 }
 
-input:invalid{
-    background-color: var(--secondary-tom);
-    border-color: var(--primary-tom) ;
+.error-message{
+    font-size: 12px;
     color: var(--primary-tom);
+    font-family: 'Roboto-Bold';
+
 }
 
-input:invalid::placeholder{
-    color: var(--primary-tom);
+.email-information{
+    display: flex;
+    justify-content: space-between;
 }
+
+.submitted-success{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 350px;
+    gap: 2rem;
+    padding: 3rem;
+}
+
+.submitted-success p{
+    width: 100%;
+}
+
+.top-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+}
+
+.top-container img{
+    width: 50px;
+}
+
+.top-container h1{
+    width: 100%;
+    color: var(--primary-dark-gray);
+}
+
+.dismissBtn{
+    width: 100%;
+}
+
+.boldded{
+    color: var(--primary-dark-gray);
+}
+
+.hide{
+    display: none;
+}
+
