--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ p{
     flex-direction: column;
     width: 100vw;
     height: 97vh;
+    position: relative;
+    overflow-x: hidden;
 }
 
 .newsletter-card{
@@ -77,14 +79,14 @@ p{
 .title{
     font-size: 50px;
     font-family: 'Roboto-Bold';
-    width: 350px;
+    width: 100%;
 }
 
 .list-items{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 350px;
+    width: 100%;
 }
 
 .list-item{
@@ -102,7 +104,7 @@ p{
     flex-direction: column;
     justify-content: center;
     gap: 30px;
-    width: 350px;
+    width: 100%;
 }
 
 .btn{
@@ -117,14 +119,14 @@ p{
 }
 
 .formBtn{
-    width: 350px;
+    width: 100%;
 }
 
 .email-container{
     display: flex;
     flex-direction: column;
     gap: 7px;
-    width: 350px;
+    width: 100%;
 }
 
 .email-container label{
@@ -167,6 +169,14 @@ p{
     width: 350px;
     gap: 2rem;
     padding: 3rem;
+}
+
+.successContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .submitted-success p{
@@ -212,4 +222,89 @@ p{
 .attribution a{
     text-decoration: none;
     color: var(--primary-tom);
+}
+
+@media screen and (max-width: 950px) {
+    .image-container img{
+        width: 250px;
+        padding-right: 40px;
+    }
+
+    .info-container{
+        width: 250px;
+    }
+
+    .title{
+        font-size: 40px;
+    }
+    .attribution{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .home-page{
+        flex-direction: column-reverse;
+        gap: 50px;
+    }
+    .info-container{
+        padding: 0;
+    }
+    .image-container img{
+        width: 400px;
+        padding-right: 0;
+    }
+
+    .info-container{
+        width: 400px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    body{
+        background-color: var(--primary-white);
+    }
+    .newsletter-card{
+        padding: 0;
+        border-radius: 0;
+        padding-bottom: 30px;
+        width: 100vw;
+        height: 100%;
+    }
+    .home-page{
+        width: 100%;
+        height: 100%;
+        
+    }
+    .image-container img{
+        width: 100vw;
+    }
+    .submitted-success{
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        justify-content: space-between;
+    }
+    .successContainer{
+        margin-top: 40%;
+    }
+
+    .dismissBtn{
+        width: 80%;
+    }
+
+    .top-container{
+        width: 80%;
+    }
+
+    .submitted-success .description{
+        width: 80%;
+    }
+}
+
+
+@media screen and (max-width: 420px) {
+    .info-container{
+        width: 90vw;
+    }
 }
